# serde-xml-rs

./: Cargo.toml
src/: error.rs
src/de/: mod.rs
src/ser/: map.rs  mod.rs
tests/: datatypes.rs  failures.rs
tests/common/: mod.rs
