[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
description = "xml-rs based deserializer for Serde (compatible with 0.9+)"
license = "MIT"
name = "serde-xml-rs"
repository = "https://github.com/RReverser/serde-xml-rs"
version = "0.6.0"
edition = "2018"

[dependencies]
serde = "1.0"
xml-rs = "0.8"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
docmatic = "0.1"
rstest = "0.16"
tracing-subscriber = "0.3"
